# pinpayments_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: charge.rs  pagination_async.rs  pagination_manual.rs  plan.rs
src/: error.rs  ids.rs  lib.rs  params.rs  resources.rs
src/client/: async_std.rs  mod.rs  pinpayments.rs
src/resources/: balance.rs  bank_account.rs  card.rs  charge.rs  currency.rs  customer.rs  dispute.rs  file.rs  plan.rs  recipient.rs  refund.rs  subscription.rs  transfer.rs
tests/: balance.rs  bank_account.rs  card.rs  charge.rs  customer.rs  dispute.rs  file.rs  plan.rs  recipient.rs  refund.rs  subscription.rs  transfer.rs
tests/common/: mod.rs
tests/fixtures/: charge-capture.json  charge-verify.json  charge-void.json  create-bank-account.json  create-card.json  create-customer-card.json  create-plan.json  create-refund.json  delete-subscription.json  get-balance.json  get-charge-refunds.json  get-charge.json  get-charges.json  get-customer-cards.json  get-customer-charges.json  get-customer.json  get-customers.json  get-dispute.json  get-disputes.json  get-file.json  get-plan.json  get-plans.json  get-recipient.json  get-recipients.json  get-subscriptions.json  get-transfer.json  get-transfers.json  list-subscription-ledger-entries.json  reactivate-subscription.json
