[workspace]
members = [
  ".",
]

[package]
name = "pinpayments_rs"
version = "0.1.0"
description = "API bindings for the Pin Payments HTTP API"
rust-version = "1.65.0"
authors = [
  "Chris Kruger <chris.kruger@khi.org>"
]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/montdidier/pinpayments_rs"
repository = "https://github.com/montdidier/pinpayments_rs"
keywords = ["pinpayments", "v1", "api", "async"]
categories = ["api-bindings"]
edition = "2021"

[lib]
name = "pinpayments"

[features]
default = []
stream = []
async = []

[dependencies]
async-std = { version = "1.12" }
async-stream = { version = "0.3.5" }
chrono = { version = "0.4.31", default-features = false, features = ["serde", "clock"], optional = true }
futures = "0.3.29"
thiserror = "1.0.50"
http-types = { version = "2.12.0", default-features = false }
serde = {version = ">=1.0.79", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
serde_path_to_error = "0.1.14"
smol_str = "0.2"
surf = { version = "2.3.2" }
tokio = { version = "1.35", optional = true }
uuid = { version = "1.6.1", optional=true, features=["v4"] }
time = { version = "0.3.30", features=["serde", "formatting", "parsing", "macros"] }

futures-util = { version = "0.3.21" }
#serde_struct_wrapper = "0.3.2"

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
http = "1.0.0"
httpmock = "0.6.8"
httptest = "0.15.5"
tokio = { version = "1.35", features = ["rt", "macros"] }

[[example]]
name = "charge"

[[example]]
name = "pagination_manual"

[[example]]
name = "pagination_async"
